fix: add overflow-x hidden for <body>

--- a/online-zoo/pages/_share/_import/_general.scss
+++ b/online-zoo/pages/_share/_import/_general.scss
@@ -4,6 +4,7 @@ body {
     width: 100%;
     min-height: 100vh;
     margin: 0;
+    overflow-x: hidden;
     background: colors.$bg-light;
 }
 
